--- a/tasks/redhat-docker-install.yml
+++ b/tasks/redhat-docker-install.yml
@@ -11,83 +11,74 @@
     - lvm2
   become: true
 
-- name: /etc/docker directory
-  file:
-    path: /etc/docker
-    state: directory
-    mode: '0644'
-  become: true
+- name: Check if Docker is installed
+  command: "docker --version"
+  register: docker_check
+  ignore_errors: yes
 
-- name: /var/log/wifimonitor directory
-  file:
-    path: /var/log/wifimonitor
-    state: directory
-    mode: '0644'
-  become: true
-
-- name: sumologs.log file
-  file:
-    path: /var/log/wifimonitor/sumologs.log
-    state: touch
-    mode: '0644'
-  become: true
-
-- name: Install Docker
-  yum:
-    name: "{{ item }}"
-    state: present
-  with_items: [ 'docker-ce', 'docker-ce-cli', 'containerd.io', 'docker-compose-plugin' ]
-  register: docker_installed
-  async: 28800
-  become: true
-
-- name: Configure Docker Daemon
-  copy:
-    src: docker-daemon.json
-    dest: /etc/docker/daemon.json
-  become: true
-
-- name: Add user to docker group
-  shell: "usermod -aG docker {{ ansible_user }}"
-  become: true
-
-- name: Create systemd drop-in directory for docker
-  file:
-    path: /etc/systemd/system/docker.service.d
-    state: directory
-    mode: '0755'
-  become: true
-
-- name: Override Docker service configuration
-  copy:
-    src: override.conf
-    dest: /etc/systemd/system/docker.service.d/override.conf
-    mode: '0644'
-  become: true
-
-- name: Reload systemd daemon and restart Docker service
-  service:
-    name: docker
-    state: restarted
-    daemon_reload: yes
-  become: true
-
-- name: Start Docker service
-  service:
-    name: docker
-    state: restarted
-    enabled: yes
-  become: true
-
-- name: Deploy Portainer
+- name: Install docker and Initialize swarm
   block:
-    - name: Download Portainer stack file
-      command: "curl -L https://experitest-appium.s3.amazonaws.com/portainer-agent-stack.yml -o portainer-agent-stack.yml"
-      become: True
-      
-    - name: Deploy Portainer stack
-      command: "sudo docker stack deploy --compose-file=portainer-agent-stack.yml portainer"
+    - name: Install Docker
+      yum:
+        name: "{{ item }}"
+        state: present
+      with_items: [ 'docker-ce', 'docker-ce-cli', 'containerd.io', 'docker-compose-plugin' ]
+      register: docker_installed
+      async: 28800
       become: true
+
+    - name: Configure Docker Daemon
+      copy:
+        src: docker-daemon.json
+        dest: /etc/docker/daemon.json
+      become: true
+
+    - name: Add user to docker group
+      shell: "usermod -aG docker {{ ansible_user }}"
+      become: true
+
+    - name: Create systemd drop-in directory for docker
+      file:
+        path: /etc/systemd/system/docker.service.d
+        state: directory
+        mode: '0755'
+      become: true
+    
+    - name: Override Docker service configuration
+      copy:
+        src: override.conf
+        dest: /etc/systemd/system/docker.service.d/override.conf
+        mode: '0644'
+      become: true
+    
+    - name: Reload systemd daemon and restart Docker service
+      service:
+        name: docker
+        state: restarted
+        daemon_reload: yes
+      become: true
+    
+    - name: Start Docker service
+      service:
+        name: docker
+        state: restarted
+        enabled: yes
+      become: true
+    
+    - name: Deploy Portainer
+      block:
+        - name: Download Portainer stack file
+          get_url:
+            url: "https://experitest-appium.s3.amazonaws.com/portainer-agent-stack.yml"
+            dest: "/tmp/portainer-agent-stack.yml"
+            mode: '0644'
+          become: true
+
+        - name: Deploy Portainer stack
+          ansible.builtin.command:
+            cmd: "sudo docker stack deploy --compose-file=/tmp/portainer-agent-stack.yml portainer"
+          become: true
+  when: docker_check.rc != 0
 
 # Install AWS Cli
 - name: installing awscli on the machine
