--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,13 +8,4 @@ aws_access_key: "{{ lookup('env','aws_access_key') }}"
 aws_secret_key: "{{ lookup('env','aws_secret_key') }}"
 
 # group_vars/all.yml
-dlm_application_properties:
-  server.port: "8080"
-  kafka.bootstrap.servers: "confluencestack.xyz.local:9092"
-  daas.ping.interval: "30"
-  ios.backup.path: "default"
-  enable.ios.backup.restore: "false"
-  enable.android.backup.restore: "true"
-  android.prefer.testharness: "false"
-  daas.environment: "prod"
-  bridge.region: "DE"
+dlm_application_properties: {}
