--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
   when: docker_installed.failed
 
 - name: Check if Docker Swarm is initialized
-  ansible.builtin.raw: "docker info --format '{{.Swarm.LocalNodeState}}'"
+  command: "docker info --format '{% raw %}{{.Swarm.LocalNodeState}}{% endraw %}'"
   register: swarm_status
   when: not docker_installed.failed
 
