--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -77,6 +77,10 @@
     name: daas-service
   register: swarm_service_info_daas
 
+- name: Debug swarm_service_info_daas
+  debug:
+    var: swarm_service_info_daas
+
 - name: Update the Docker Swarm service if image version changes
   docker_swarm_service:
     name: daas-service
