--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,7 +27,7 @@
   when: swarm_status.stdout == "active"
 
 - name: Make sure pip is installed
-  apt:
+  package:
     name: python3-pip
     state: present
 
