--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,5 +51,48 @@
   shell: docker pull {{ image_name }}
   become: true
 
-- name: Include task to deploy Device Lifecycle Manager
-  include_tasks: "{{ ansible_os_family | lower }}-deploy.yml"
+- name: Check if the Docker Swarm service exists
+  docker_swarm_service_info:
+    name: daas-service
+  register: swarm_service_info
+
+- name: Deploy the Docker Swarm service
+  docker_swarm_service:
+    name: daas-service
+    image: "{{ image_name }}"
+    env:
+      SPRING_APPLICATION_JSON: "{{ dlm_application_properties | to_json }}"
+    mode: replicated
+    replicas: 3
+    update_config:
+      parallelism: 1
+      delay: 10s
+      failure_action: rollback
+      monitor: 60s
+      order: start-first
+  when: not swarm_service_info.exists
+
+- name: Gather info of Docker Swarm service
+  docker_swarm_service_info:
+    name: daas-service
+  register: swarm_service_info_daas
+
+- name: Debug swarm_service_info_daas
+  debug:
+    var: swarm_service_info_daas
+
+- name: Update the Docker Swarm service if image version changes
+  docker_swarm_service:
+    name: daas-service
+    image: "{{ image_name }}"
+    env:
+      SPRING_APPLICATION_JSON: "{{ dlm_application_properties | to_json }}"
+    mode: replicated
+    replicas: 3
+    update_config:
+      parallelism: 1
+      delay: 10s
+      failure_action: rollback
+      monitor: 60s
+      order: start-first
+  when: swarm_service_info_daas.service is defined and swarm_service_info_daas.service | length > 0 and swarm_service_info_daas.service.Spec.TaskTemplate.ContainerSpec.Image != image_name
