--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,7 @@ aws_secret_key: "{{ lookup('env','aws_secret_key') }}"
 
 # group_vars/all.yml
 dlm_application_properties: {}
+
+service_name: "daas-service"
+
+dlm_replicas: 1
