--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,8 @@ awsecr_name: 789032366904.dkr.ecr.us-east-1.amazonaws.com
 
 image_name: "{{ awsecr_name }}/cloud/dlm:{{ dlm_version }}"
 
+dlm_version: "latest"
+
 aws_access_key: "{{ lookup('env','aws_access_key') }}"
 aws_secret_key: "{{ lookup('env','aws_secret_key') }}"
 
