--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,6 +16,8 @@ volume_name: "{{ service_name }}-backup"
 
 volume_path: "/var/lib/docker/volumes/{{ volume_name }}/_data"
 
+mount_path: "/root/backup"
+
 service_name: "daas-service"
 
 dlm_replicas: 1
