add support for secrets

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,10 +12,15 @@ aws_secret_key: "{{ lookup('env','aws_secret_key') }}"
 # group_vars/all.yml
 dlm_application_properties: {}
 
-volume_name: "{{ service_name }}-backup"
+service_volume_name: "{{ service_name }}-backup"
+supervision_volume_name: "{{ service_name }}-supervision"
 
-mount_path: "/root/backup"
+service_mount_path: "/root/backup"
+supervision_mount_path: "/tmp/supervision"
 
 service_name: "daas-service"
 
 dlm_replicas: 1
+
+dlm_internet_secrets: {}
+dlm_p12_password: ""
