--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,12 +12,12 @@
   - service_mount_path
   - supervision_mount_path
   - dlm_replicas
-  - dlm_internet_secrets
   - dlm_p12_password
   - dlm_application_properties
   - dlm_version
   - aws_access_key
   - aws_secret_key
+  - supervision_p12_path
 
 - name: Check if Docker is installed
   command: docker --version
@@ -80,12 +80,12 @@
 
 - name: Create temp file for internet info secrets
   file:
-    path: "/tmp/{{ service_name }}_internetinfo"
+    path: "/tmp/internetInfo"
     state: touch
 
 - name: Write secrets to temp internet info file
   lineinfile:
-    path: "/tmp/{{ service_name }}_internetinfo"
+    path: "/tmp/internetInfo"
     line: "{{ item.key }}={{ item.value }}"
     regexp: "^{{ item.key | replace('.', '\\.') }}="
   with_dict: "{{ dlm_internet_secrets }}"
@@ -95,21 +95,26 @@
     path: "{{ supervision_mount_path }}"
     state: directory
 
+- name: Copy supervision p12 to docker host
+  copy:
+    src: "files/{{ supervision_p12_path }}"
+    dest: "/var/lib/docker/volumes/SuperVision/_data/SupevisionCert.p12"
+
 - name: Create file for p12 secret
   copy:
     content: "{{ dlm_p12_password }}"
-    dest: "{{ supervision_mount_path }}/{{ service_name }}_p12.password"
+    dest: "{{ supervision_mount_path }}/p12_password"
 
 - name: Create docker secrets for internet info
   docker_secret:
-    name: "{{ service_name }}_internetInfo"
-    data_src : "/tmp/{{ service_name }}_internetinfo"
+    name: "maintenance.internet.authentication"
+    data_src : "/tmp/internetinfo"
     state: present
 
 - name: Create docker secrets for p12 password
   docker_secret:
-    name: "{{ service_name }}_p12.password"
-    data_src : "{{ supervision_mount_path }}/{{ service_name }}_p12.password"
+    name: "p12.password"
+    data_src : "{{ supervision_mount_path }}/p12_password"
     state: present
 
 - name: Deploy the Docker Swarm service
@@ -135,10 +140,10 @@
         source: "{{ supervision_volume_name }}"
         target: "{{ supervision_mount_path }}"
     secrets:
-      - secret_name: "{{ service_name }}_internetinfo"
-        filename: "/tmp/{{ service_name }}_internetinfo"
-      - secret_name: "{{ service_name }}_p12.password"
-        filename: "{{ supervision_mount_path }}/{{ service_name }}_p12.password"
+      - secret_name: "maintenance.internet.authentication"
+        filename: "/tmp/internetInfo"
+      - secret_name: "p12.password"
+        filename: "{{ supervision_mount_path }}/p12_password"
 
 - name: Gather info of Docker Swarm service
   docker_swarm_service_info:
